--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "obsidian-typed",
-  "version": "1.0.0",
-  "description": "About",
-  "main": " the Obsidian API.index.d.ts",
+  "name": "@types/obsidian",
+  "version": "1.4.11",
+  "description": "Type definitions for the latest Obsidian API (https://obsidian.md)",
+  "main": "",
   "types": "types/*.d.ts",
+  "homepage": "https://github.com/joelvaneenwyk/obsidian-typed#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/joelvaneenwyk/obsidian-typed/issues"
   },
-  "homepage": "https://github.com/joelvaneenwyk/obsidian-typed#readme"
+  "dependencies": {
+      "@types/codemirror": "5.60.8",
+      "moment": "2.29.4"
+  },
+  "peerDependencies": {
+      "@codemirror/state": "^6.0.0",
+      "@codemirror/view": "^6.0.0"
+  }
 }
