chore: Dictionary updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "Dynalist"
+        "codemirror",
+        "Dynalist",
+        "Fevol",
+        "offref",
+        "popout"
     ]
 }
